# conda-metadata-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Browse.py  Dockerfile  LICENSE  README.md  app.py  app_config.py  app_config.schema.json  app_config.toml  app_proxy.py  auth_config.py  environment.yml  pixi.toml  pyproject.toml  read_config.py  requirements.txt  st_route.py  version_order.py
.devcontainer/: devcontainer.json
.devcontainer/pixi/: Dockerfile  devcontainer.json
.devcontainer/streamlit-cloud/: devcontainer.json
.github/scripts/: check-deps.sh  sync-deps.sh
.github/workflows/: ci.yml  container.yml  update-lockfiles.yml
.streamlit/: config.toml
conda_metadata_app/: app.py  app_config.py  version_info.py  version_order.py
conda_metadata_app/pages/: main_page.py  search_by_file_path_page.py
docker/: install.sh
docs/: configuration.md
pages/: Search_by_file_path.py
