[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true  # remove this if conda-oci-mirror can be fetched directly from PyPI

[project]
name = "conda-metadata-app"
description = "A streamlit app to query metadata from conda packages"
version = "0.1.0"
authors = [{ name = "jaimergp", email = "jaimergp@users.noreply.github.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"

# please sync the dependencies with pixi.toml
dependencies = [
  "pydantic-settings>=2.4.0,<3",
  "pydantic>=2.8.2,<3",
  "typing-extensions>=4.12.2,<5",
  "zstandard>=0.23.0,<0.24",
  "py-rattler>=0.7.0,<0.8",
  "conda-forge-metadata>=0.11.0,<0.12",
  "conda-oci-mirror@git+https://github.com/channel-mirrors/conda-oci-mirror.git#egg=25ea3e436f0b0bc5a9c646121efafc9c68e116cd",  # v0.1.0
  "streamlit>=1.38.0,<2",
  "streamlit-searchbox==0.1.19",
  "setuptools",
]

[project.urls]
repository = "https://github.com/Quansight-Labs/conda-metadata-app"
